# perry-drivers

./: .gitignore  README.md  build_all.sh
NXP/FRDM-K22F/devices/MK22F51212/: MK22F51212_features.h
NXP/FRDM-K22F/perry-build/: CMakeLists.txt  flags.cmake
NXP/FRDM-K64F/: FRDM-K64F_manifest_v3_9.xml  SW-Content-Register.txt
NXP/FRDM-K64F/devices/MK64F12/: MK64F12_features.h
NXP/FRDM-K64F/devices/MK64F12/drivers/: fsl_adc16.c  fsl_clock.c  fsl_dspi.c  fsl_pit.c  fsl_pit.h  fsl_uart.c
NXP/FRDM-K64F/perry-build/: CMakeLists.txt  build.sh  flags.cmake
NXP/FRDM-K82F/: FRDM-K82F_manifest_v3_6.xml  SW-Content-Register.txt
NXP/FRDM-K82F/devices/MK82F25615/: MK82F25615_features.h
NXP/FRDM-K82F/devices/MK82F25615/gcc/: MK82FN256xxx15_ram.ld  startup_MK82F25615.S
NXP/FRDM-K82F/perry-build/: CMakeLists.txt
NXP/FRDM-KL25Z/: FRDM-KL25Z_manifest.xml  SW-Content-Register.txt
NXP/FRDM-KL25Z/perry-build/: CMakeLists.txt  clean.sh
NXP/LPCXpresso51U68/: LPCXpresso51U68_manifest_v3_10.xml  SW-Content-Register.txt
NXP/LPCXpresso51U68/CMSIS/Driver/Include/: CMSIS_Driver_Include_I2C_LPC51U68.cmake  CMSIS_Driver_Include_SPI_LPC51U68.cmake  CMSIS_Driver_Include_USART_LPC51U68.cmake
NXP/LPCXpresso51U68/boards/lpcxpresso51u68/driver_examples/iap/iap_flash/armgcc/: CMakeLists.txt
NXP/LPCXpresso51U68/components/codec/: component_wm8904_adapter_LPC51U68.cmake  driver_codec_LPC51U68.cmake
NXP/LPCXpresso51U68/components/codec/i2c/: component_codec_i2c_LPC51U68.cmake
NXP/LPCXpresso51U68/components/codec/wm8904/: driver_wm8904_LPC51U68.cmake
NXP/LPCXpresso51U68/components/ft6x06/: driver_ft6x06_LPC51U68.cmake
NXP/LPCXpresso51U68/components/i2c/: component_flexcomm_i2c_adapter_LPC51U68.cmake
NXP/LPCXpresso51U68/components/ili9341/: driver_ili9341_LPC51U68.cmake
NXP/LPCXpresso51U68/components/lists/: component_lists_LPC51U68.cmake
NXP/LPCXpresso51U68/components/log/: component_log_LPC51U68.cmake  component_log_backend_debugconsole_LPC51U68.cmake  component_log_backend_ringbuffer_LPC51U68.cmake
NXP/LPCXpresso51U68/components/osa/: component_osa_LPC51U68.cmake  component_osa_bm_LPC51U68.cmake
NXP/LPCXpresso51U68/components/panic/: component_panic_LPC51U68.cmake
NXP/LPCXpresso51U68/components/serial_manager/: component_serial_manager_LPC51U68.cmake  component_serial_manager_uart_LPC51U68.cmake
NXP/LPCXpresso51U68/components/timer/: component_ctimer_adapter_LPC51U68.cmake
NXP/LPCXpresso51U68/components/uart/: component_usart_adapter_LPC51U68.cmake
NXP/LPCXpresso51U68/devices/LPC51U68/: device_LPC51U68_CMSIS_LPC51U68.cmake  device_LPC51U68_startup_LPC51U68.cmake  device_LPC51U68_system_LPC51U68.cmake  driver_fro_calib_LPC51U68.cmake  driver_power_LPC51U68.cmake
NXP/LPCXpresso51U68/devices/LPC51U68/cmsis_drivers/: driver_cmsis_flexcomm_i2c_LPC51U68.cmake  driver_cmsis_flexcomm_spi_LPC51U68.cmake  driver_cmsis_flexcomm_usart_LPC51U68.cmake
NXP/LPCXpresso51U68/devices/LPC51U68/drivers/: driver_clock_LPC51U68.cmake  driver_common_LPC51U68.cmake  driver_ctimer_LPC51U68.cmake  driver_flashiap_LPC51U68.cmake  driver_flexcomm_LPC51U68.cmake  driver_flexcomm_i2c_LPC51U68.cmake  driver_flexcomm_i2c_dma_LPC51U68.cmake  driver_flexcomm_i2s_LPC51U68.cmake  driver_flexcomm_i2s_dma_LPC51U68.cmake  driver_flexcomm_spi_LPC51U68.cmake  driver_flexcomm_spi_dma_LPC51U68.cmake  driver_flexcomm_usart_LPC51U68.cmake  driver_flexcomm_usart_dma_LPC51U68.cmake  driver_fmeas_LPC51U68.cmake  driver_gint_LPC51U68.cmake  driver_iap_LPC51U68.cmake  driver_inputmux_LPC51U68.cmake  driver_inputmux_connections_LPC51U68.cmake  driver_lpc_adc_LPC51U68.cmake  driver_lpc_crc_LPC51U68.cmake  driver_lpc_dma_LPC51U68.cmake  driver_lpc_gpio_LPC51U68.cmake  driver_lpc_iocon_LPC51U68.cmake  driver_lpc_rtc_LPC51U68.cmake  driver_mrt_LPC51U68.cmake  driver_pint_LPC51U68.cmake  driver_reset_LPC51U68.cmake  driver_sctimer_LPC51U68.cmake  driver_utick_LPC51U68.cmake  driver_wwdt_LPC51U68.cmake  fsl_reset.c  fsl_spi.c  fsl_usart.c
NXP/LPCXpresso51U68/devices/LPC51U68/utilities/: utility_assert_LPC51U68.cmake  utility_debug_console_LPC51U68.cmake  utility_shell_LPC51U68.cmake
NXP/LPCXpresso51U68/perry-build/: CMakeLists.txt  flags.cmake
NXP/LPCXpresso51U68/tools/cmake_toolchain_files/: clang.cmake
SAM/: .gitignore
SAM/common/services/clock/sam4l/: sysclk.c  sysclk.h
SAM/sam/drivers/adc/: adc.c  adc.h
SAM/sam/drivers/dacc/: dacc.c
SAM/sam/drivers/hsmci/: hsmci.c
SAM/sam/drivers/pio/: pio_handler.c
SAM/sam/drivers/pmc/: pmc.c  pmc.h
SAM/sam/drivers/tc/: tc.c  tc.h
SAM/sam/drivers/uart/: uart.c
SAM/sam/drivers/usart/: usart.c
SAM/sam/utils/: compiler.h
SAM/sam/utils/make/: Makefile.sam.in
SAM/sam0/utils/make/: Makefile.sam.in
STM/STM32F072/: .mxproject  Makefile  STM32F072.ioc
STM/STM32F072/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_ll_dma.h  stm32f0xx_ll_i2c.h  stm32f0xx_ll_spi.h  stm32f0xx_ll_tim.h  stm32f0xx_ll_usart.h
STM/STM32F072/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal.c  stm32f0xx_hal_dma.c  stm32f0xx_ll_dma.c  stm32f0xx_ll_i2c.c  stm32f0xx_ll_spi.c  stm32f0xx_ll_tim.c  stm32f0xx_ll_usart.c
STM/STM32F072/Inc/: stm32f0xx_hal_conf.h
STM/STM32F072/Src/: main.c  stm32f0xx_hal_msp.c
STM/STM32F103/: .mxproject  Makefile  STM32F103.ioc
STM/STM32F103/Inc/: stm32f1xx_hal_conf.h
STM/STM32F103/Src/: main.c  stm32f1xx_hal_msp.c
STM/STM32F407/: .mxproject  Makefile  STM32F407.ioc
STM/STM32F407/Inc/: main.h  stm32f4xx_hal_conf.h
STM/STM32F407/Src/: main.c  stm32f4xx_hal_msp.c
STM/STM32F769/: .mxproject  Makefile  STM32F769.ioc
STM/STM32F769/Inc/: stm32f7xx_hal_conf.h
STM/STM32F769/Src/: main.c  stm32f7xx_hal_msp.c
STM/STM32L073/: .mxproject  Makefile  STM32L073.ioc
STM/STM32L073/Inc/: stm32l0xx_hal_conf.h
STM/STM32L073/Src/: main.c  stm32l0xx_hal_msp.c
STM/STM32L152/: Makefile
STM/STM32L152/Core/Inc/: stm32l1xx_hal_conf.h
STM/STM32L152/Core/Src/: main.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c
STM/STM32L476/: .mxproject  Makefile  STM32L476.ioc
STM/STM32L476/Inc/: stm32l4xx_hal_conf.h
STM/STM32L476/Src/: main.c  stm32l4xx_hal_msp.c
(+419 files in other folders)
